Fixed margins and content alignment

--- a/blocks/information-carousel/information-carousel.css
+++ b/blocks/information-carousel/information-carousel.css
@@ -77,7 +77,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     grid-column: 1;
     grid-row: 1;
     text-align: center;
@@ -111,7 +111,7 @@
     background: var(--color-yellow);
     padding: 1rem var(--item-column-gap);
     border-radius: calc( var( --element-border-radius ) / 2);
-    margin: 0 var(--row-gap) calc(var(--block-margin) * 2);
+    margin: var(--row-gap);
 }
 
 .information-carousel-footer-note p {
@@ -204,7 +204,6 @@
     }
 
     .information-carousel-content {
-        justify-content: center;
         padding: 0;
     }
 
@@ -240,5 +239,20 @@
 
     .information-carousel-navigation-next {
         right: var(--page-padding);
+    }
+
+    .information-carousel-footer-note {
+        margin: 0 auto var(--item-row-gap);
+    }
+}
+
+@media (max-width: 1200px) {
+    .information-carousel-slide a {
+        width: 100%;
+        height: 100%;
+    }
+
+    .information-carousel .information-carousel-media {
+        height: 100%;
     }
 }
